--- a/Configure/QuantumultX/QuantumultX.conf
+++ b/Configure/QuantumultX/QuantumultX.conf
@@ -40,7 +40,7 @@ geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubuserc
 
 
 # ☢️ 资源解析器
-resource_parser_url=https://fastly.jsdelivr.net/gh/KOP-XIAO/QuantumultX@master/Scripts/resource-parser.js
+resource_parser_url=https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/raw/main/Configure/QuantumultX/resource-parser.js
 
 
 # ☢️ 排除路线
