--- a/Configure/QuantumultX/QuantumultX.conf
+++ b/Configure/QuantumultX/QuantumultX.conf
@@ -136,11 +136,12 @@ url-latency-benchmark=英国(延迟优选), server-tag-regex=^(?=.*(🇬🇧|英
 round-robin=英国(负载均衡), server-tag-regex=^(?=.*(🇬🇧|英|伦敦|(?i)UK|United Kingdom))(?!.*(回国|校园|游戏|教育|久虚|(?i)GAME|IPV6)).*$, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_Kingdom.png
 url-latency-benchmark=土耳其(延迟优选), server-tag-regex=^(?=.*(🇹🇷|土耳其|(?i)TR|TUR|Turkey))(?!.*(回国|校园|游戏|教育|久虚|(?i)GAME|IPV6)).*$, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/mgxray/shadowrocket-Quantumult_x-Loon-Stash/main/IconSet/Color/Turkey.png
 round-robin=土耳其(负载均衡), server-tag-regex=^(?=.*(🇹🇷|土耳其|(?i)TR|TUR|Turkey))(?!.*(回国|校园|游戏|教育|久虚|(?i)GAME|IPV6)).*$, img-url=https://raw.githubusercontent.com/mgxray/shadowrocket-Quantumult_x-Loon-Stash/main/IconSet/Color/Turkey.png
-static=全球加速, 自动选择, direct, 香港节点, 台湾节点, 日本节点, 韩国节点,狮城节点, 美国节点, proxy, img-url=https://521github.com/extdomains/github.com/JiaBei-Q/icon/raw/main/Policy-Filter/Proxy.png
-static=苹果服务, direct, 香港节点, 台湾节点, 美国节点, 日本节点, 韩国节点,狮城节点, proxy, img-url=https://521github.com/extdomains/github.com/JiaBei-Q/icon/raw/main/Policy-Filter/Apple.png
-static=哔哩哔哩, direct, 香港节点, 台湾节点, img-url=https://521github.com/extdomains/github.com/JiaBei-Q/icon/raw/main/Policy-Filter/Bilibili.png
-static=国际媒体, 自动选择, 台湾节点, direct, 香港节点, 日本节点, 韩国节点,美国节点, 狮城节点, proxy, img-url=https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/raw/main/Icon/Color/caiyun.png
-static=兜底分流, 自动选择, 全球加速, direct, 香港节点, 台湾节点, 日本节点, 韩国节点,狮城节点, 美国节点, proxy, img-url=https://521github.com/extdomains/github.com/JiaBei-Q/icon/raw/main/Policy-Filter/Outside.png
+
+# static=全球加速, 自动选择, direct, 香港节点, 台湾节点, 日本节点, 韩国节点,狮城节点, 美国节点, proxy, img-url=https://521github.com/extdomains/github.com/JiaBei-Q/icon/raw/main/Policy-Filter/Proxy.png
+# static=苹果服务, direct, 香港节点, 台湾节点, 美国节点, 日本节点, 韩国节点,狮城节点, proxy, img-url=https://521github.com/extdomains/github.com/JiaBei-Q/icon/raw/main/Policy-Filter/Apple.png
+# static=哔哩哔哩, direct, 香港节点, 台湾节点, img-url=https://521github.com/extdomains/github.com/JiaBei-Q/icon/raw/main/Policy-Filter/Bilibili.png
+# static=国际媒体, 自动选择, 台湾节点, direct, 香港节点, 日本节点, 韩国节点,美国节点, 狮城节点, proxy, img-url=https://521github.com/extdomains/github.com/JiaBei-Q/Auxiliary/raw/main/Icon/Color/caiyun.png
+# static=兜底分流, 自动选择, 全球加速, direct, 香港节点, 台湾节点, 日本节点, 韩国节点,狮城节点, 美国节点, proxy, img-url=https://521github.com/extdomains/github.com/JiaBei-Q/icon/raw/main/Policy-Filter/Outside.png
 
 # ☢️ 应用策略
 static=OpenAI, 节点选择, proxy, 自动(延迟优选), 自动(故障转移), 自动(负载均衡), 负载均衡(随机), 香港(延迟优选), 香港(负载均衡), 台湾(延迟优选), 台湾(负载均衡), 日本(延迟优选), 日本(负载均衡), 韩国(延迟优选), 韩国(负载均衡), 新加坡(延迟优选), 新加坡(负载均衡), 美国(延迟优选), 美国(负载均衡), 英国(延迟优选), 英国(负载均衡), 土耳其(延迟优选), 土耳其(负载均衡), 全球直连, img-url=https://raw.githubusercontent.com/mgxray/Quantumult_x_II/main/country/chatgpt.png
