--- a/Configure/LanceX/LanceX.conf
+++ b/Configure/LanceX/LanceX.conf
@@ -1,11 +1,12 @@
 ################################################################################################################################
-# 创建者:JiaBei-Q                                                                                                              #
+# 创建者:cuarenta                                                                                                              #
 # 客户端:LanceX                                                                                                                #
 # 创建日期:2024-03-03 10:10:01                                                                                                 #
-# 托管地址:https://521github.com/extdomains/https://github.com/JiaBei-Q/Auxiliary/raw/main/Configure/LanceX/LanceX.conf        #                       
+# 托管地址:https://github.com/cuarenta/Auxiliary/raw/main/Configure/LanceX/LanceX.conf                                         #                       
 ################################################################################################################################
 
 # > [+]2024-03-03      第一次配置    暂未进行深入修改；后期将加入更多规则及脚本；
+# > [+]2025-10-10      第二次更新    主要剔除无效节点；更新最新规则及页面重排版；
 
 
 
