--- a/Configure/LanceX/LanceX.conf
+++ b/Configure/LanceX/LanceX.conf
@@ -1,5 +1,5 @@
 ################################################################################################################################
-# 创建者:cuarenta                                                                                                              #
+# 创建者:Cuarenta                                                                                                              #
 # 客户端:LanceX                                                                                                                #
 # 创建日期:2024-03-03 10:10:01                                                                                                 #
 # 托管地址:https://github.com/cuarenta/Auxiliary/raw/main/Configure/LanceX/LanceX.conf                                         #                       
