--- a/Configure/Loon/Loon.conf
+++ b/Configure/Loon/Loon.conf
@@ -87,7 +87,7 @@ resource-parser = https://gitlab.com/sub-store/Sub-Store/-/releases/permalink/la
 # ☢️ ssid-trigger = "default":rule, "cellular":rule,"中国联通":direct
 
 # ☢️ geoip
-geoip-url = https://521github.com/extdomains/raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
+geoip-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 
 # ☢️ 更全IP地址
 # ☢️ https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
