--- a/Configure/Loon/Loon.conf
+++ b/Configure/Loon/Loon.conf
@@ -161,7 +161,7 @@ dl.l.google.com = server:119.29.29.29
 # ☢️ 示例3:
 # ☢️ 卡车极速 = https://kcssr.me/auth/register?code=jUqG
 
-优选订阅 = https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Node/General.txt,udp=false,fast-open=false,vmess-aead=true,enabled=true,img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Color/001-100/Airport%20(2).png
+优选订阅 = https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Node/General.txt,udp=true,fast-open=true,vmess-aead=true,update-interval=43200,img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Color/001-100/Airport%20(2).png
 
 # ☢️ 功能策略
 [Proxy Group]
