--- a/Configure/QuantumultX/QuantumultX.conf
+++ b/Configure/QuantumultX/QuantumultX.conf
@@ -185,11 +185,11 @@ dest-hash=负载均衡(随机), server-tag-regex=^*$, img-url=https://raw.github
 # ☢️ 默认设置15分钟测速一次，可自行修改check-interval=后面的数值（单位：秒），tolerance=后面的数值不建议修改
 # url-latency-benchmark=自动选择, server-tag-regex=.*, check-interval=1800, tolerance=100, alive-checking=false, img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Color/001-100/Auto.png
 # url-latency-benchmark=香港节点, server-tag-regex=(?=.*(港|HK|(?i)Hong))^((?!(台|日|韩|新|美)).)*$, check-interval=1800, tolerance=100, img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Country/201-300/HK02.png
-# url-latency-benchmark=台湾节点, server-tag-regex=(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$, check-interval=1800, tolerance=100, img-url=https://521github.com/extdomains/github.com/JiaBei-Q/icon/raw/main/Policy-Country/TW.png
+# url-latency-benchmark=台湾节点, server-tag-regex=(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$, check-interval=1800, tolerance=100, img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Country/501-577/TW.png
 # url-latency-benchmark=日本节点, server-tag-regex=(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美)).)*$, check-interval=1800, tolerance=100, img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Country/201-300/JP.png
 # url-latency-benchmark=韩国节点, server-tag-regex=韩国|韩|🇰🇷|KR|(?i)Korea, check-interval=1800, tolerance=100, alive-checking=false,img-url=https://521github.com/extdomains/raw.githubusercontent.com/Centralmatrix3/Matrix-io/master/Gallery/Color/KR.png
 # url-latency-benchmark=狮城节点, server-tag-regex=(?=.*(新|狮|獅|SG|(?i)Singapore))^((?!(港|台|日|韩|美)).)*$, check-interval=1800, tolerance=100, img-url=https://521github.com/extdomains/github.com/JiaBei-Q/raw/blob/main/Policy-Country/SG.png
-# url-latency-benchmark=美国节点, server-tag-regex=(?=.*(美|US|(?i)States|American))^((?!(港|台|日|韩|新)).)*$, check-interval=1800, tolerance=100, img-url=https://521github.com/extdomains/raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
+# url-latency-benchmark=美国节点, server-tag-regex=(?=.*(美|US|(?i)States|American))^((?!(港|台|日|韩|新)).)*$, check-interval=1800, tolerance=100, img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Country/501-577/US.png
 
 
 # ☢️ 规则分流远程订阅
