--- a/Configure/QuantumultX/QuantumultX.conf
+++ b/Configure/QuantumultX/QuantumultX.conf
@@ -102,13 +102,13 @@ https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/QX.snippet, ta
 
 # ☢️ 远程节点订阅
 [server_remote]
-https://sub.fq521.onflashdrive.app/auto, tag=轩辕测试节点, update-interval=86400, opt-parser=true,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Vector/001-100/Bypass.png
+https://xyfqzy.zone.id/yyds/auto, tag=轩辕节点, update-interval=86400, opt-parser=true,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Vector/001-100/Bypass.png
 
-https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Node/General.txt, tag=测速节点, update-interval=86400, opt-parser=true,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Vector/001-100/Bat.png
+https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Node/General.txt, tag=仓库节点-Vless, update-interval=86400, opt-parser=true,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Vector/001-100/Bat.png
 
-https://vmess.fxxk.dedyn.io/auto,tag=果闻测试节点, update-interval=86400, opt-parser=true,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Vector/001-100/Airport.png
+https://fg88.whtjdasha.com/api/v1/client/subscribe?token=7bbd0dbe02bcebb1b94e2cdf7c27770c,tag=临时节点-1T, update-interval=86400, opt-parser=true,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Vector/001-100/Airport.png
 
-https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Node/Vless.txt,tag=Vless自制节点, update-interval=86400, opt-parser=true,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Vector/001-100/Azure%20(3).PNG
+https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Node/Vless.txt,tag=Github节点-Vless, update-interval=86400, opt-parser=true,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Vector/001-100/Azure%20(3).PNG
 
 
 # ☢️ 禁用系统DNS/IPv6
