--- a/Configure/QuantumultX/QuantumultX.conf
+++ b/Configure/QuantumultX/QuantumultX.conf
@@ -106,7 +106,7 @@ https://xyfqzy.zone.id/yyds/auto, tag=轩辕节点, update-interval=86400, opt-p
 
 https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Node/General.txt, tag=仓库节点-Vless, update-interval=86400, opt-parser=true,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Vector/001-100/Bat.png
 
-https://fg88.whtjdasha.com/api/v1/client/subscribe?token=7bbd0dbe02bcebb1b94e2cdf7c27770c,tag=临时节点-1T, update-interval=86400, opt-parser=true,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Vector/001-100/Airport.png
+https://getsub.classelivre.eu.org/sub?force=auto,tag=天城节点, update-interval=86400, opt-parser=true,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Vector/001-100/Airport.png
 
 https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Node/Provisiona.txt,tag=Github节点-Vless, update-interval=86400, opt-parser=true,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Vector/001-100/Azure%20(3).PNG
 
