--- a/Configure/Surge/Surge.conf
+++ b/Configure/Surge/Surge.conf
@@ -120,7 +120,7 @@ Airport-1 = select,policy-path=https://raw.githubusercontent.com/Cuarentas/Auxil
 
 Airport-2 = select,policy-path=https://raw.githubusercontent.com/Cuarentas/Auxiliary/main/Node/Suger.txt, hidden=1
 
-Airport-3 = select,policy-path=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Node/Provisiona.txt, hidden=1
+Airport-3 = select,policy-path=https://getsub.classelivre.eu.org/sub?force=auto, hidden=1
 
 Airport-4 = select,policy-path=https://xyfqzy.zone.id/yyds/auto, hidden=1
 
