--- a/Configure/Loon/Loon.conf
+++ b/Configure/Loon/Loon.conf
@@ -163,12 +163,16 @@ dl.l.google.com = server:119.29.29.29
 
 优选订阅 = https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Node/General.txt,udp=true,fast-open=true,vmess-aead=true,update-interval=43200,img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Color/001-100/Airport%20(2).png
 
+天城订阅 = https://getsub.classelivre.eu.org/sub?force=auto，udp=true,fast-open=true,vmess-aead=true,update-interval=43200,img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Color/201-300/hot.png
+
+
+
 # ☢️ 功能策略
 [Proxy Group]
 # ☢️ 节点选择
 节点选择 = select,手动切换,自动选择,url = http://www.gstatic.com/generate_204,,interval = 1800,interval = 1800,img-url = https://raw.githubusercontent.com/fanmingming/Rules/main/Filter/Proxy.png
-自动选择 = url-test,优选订阅,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
-手动切换 = select,优选订阅,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
+自动选择 = url-test,优选订阅，天城订阅,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
+手动切换 = select,优选订阅，天城订阅,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
 国内媒体 = select,全球直连,img-url = https://raw.githubusercontent.com/fanmingming/Rules/main/Filter/Bilibili.png
 国际媒体 = select,节点选择,手动切换,自动选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 微软服务 = select,节点选择,手动切换,自动选择,全球直连,img-url = https://raw.githubusercontent.com/fanmingming/Rules/main/Filter/Microsoft.png
