--- a/Configure/Surge/Surge.conf
+++ b/Configure/Surge/Surge.conf
@@ -119,11 +119,8 @@ EDC_Surge-Panel = type=generic,script-path=https://raw.githubusercontent.com/erd
 
 Airport-1 = select,policy-path=https://raw.githubusercontent.com/Cuarentas/Auxiliary/main/Node/Suger.txt, hidden=1
 
-Airport-2 = select,policy-path=https://getsub.classelivre.eu.org/sub?force=auto, hidden=1
+Airport-2 = select,policy-path=https://sub.danhu.ddns-ip.net/paste/A251001N1rhoxeHA/base64, hidden=1
 
-Airport-3 = select,policy-path=https://xyfqzy.zone.id/yyds/auto, hidden=1
-
-Airport-4 = select,policy-path=https://sub.danhu.ddns-ip.net/paste/A251001N1rhoxeHA/base64, hidden=1
 
 # ☢️ 备用订阅链接URL:🚀
 
@@ -133,7 +130,7 @@ Airport-4 = select,policy-path=https://sub.danhu.ddns-ip.net/paste/A251001N1rhox
 # ☢️ 如增加Sub-Store订阅链接则写法如下：
 # ☢️ PROXY = select, policy-path=https://sub.store/download/collection/MySub, update-interval=0
 
-Airport merger = url-test,include-other-group="Airport-1,Airport-2，Airport-3,Airport-4", hidden=1
+Airport merger = url-test,include-other-group="Airport-1,Airport-2", hidden=1
 
 # ☢️ 配置选择文件
 🛫 节点选择 = select, ☯️ 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
