--- a/Configure/Surge/Surge.conf
+++ b/Configure/Surge/Surge.conf
@@ -116,10 +116,10 @@ EDC_Surge-Panel = type=generic,script-path=https://raw.githubusercontent.com/erd
 # ☢️ 外部订阅链接
 # ☢️ hidden=1 或者 hidden=true 隐藏该策略组
 
-
+# ☢️Airport-1 为自制节点
 Airport-1 = select,policy-path=https://raw.githubusercontent.com/Cuarentas/Auxiliary/main/Node/Suger.txt, hidden=1
-
-Airport-2 = select,policy-path=https://sub.danhu.ddns-ip.net/paste/A251001N1rhoxeHA/base64, hidden=1
+# ☢️Airport-2 为收集节点
+Airport-2 = select,policy-path=https://raw.githubusercontent.com/Cuarentas/Auxiliary/main/Node/Provisiona.txt, hidden=1
 
 
 # ☢️ 备用订阅链接URL:🚀
