--- a/Configure/Surge/Surge.conf
+++ b/Configure/Surge/Surge.conf
@@ -130,12 +130,15 @@ Airport-2 = select,policy-path=https://raw.githubusercontent.com/Cuarentas/Auxil
 # ☢️ 如增加Sub-Store订阅链接则写法如下：
 # ☢️ PROXY = select, policy-path=https://sub.store/download/collection/MySub, update-interval=0
 
-Airport merger = url-test,include-other-group="Airport-1,Airport-2", hidden=1
+
+# ☢️ Airport merger = url-test,include-other-group="Airport-1,Airport-2", hidden=1                                                        (备份)
+# ☢️☯️ 自动选择 = url-test, include-other-group="Airport merger", url=http://www.gstatic.com/generate_204, interval=300, tolerance=50     (备份)
+
 
 # ☢️ 配置选择文件
 🛫 节点选择 = select, ☯️ 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
-📶 手动切换 = select, include-other-group="Airport merger", url=http://www.gstatic.com/generate_204, interval=300, tolerance=50
-☯️ 自动选择 = url-test, include-other-group="Airport merger", url=http://www.gstatic.com/generate_204, interval=300, tolerance=50
+📶 手动切换 = select, Airport-1, Airport-2, url=http://www.gstatic.com/generate_204, interval=300, tolerance=50
+☯️ 自动选择 = url-test, Airport-1,  Airport-2, url=http://www.gstatic.com/generate_204, interval=300, tolerance=50
 📲 电报消息 = select, 🛫 节点选择, ☯️ 自动选择, 🇸🇬 狮城节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
 🎧 OpenAi = select, 🛫 节点选择, ☯️ 自动选择, 🇸🇬 狮城节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
 🎞 油管视频 = select, 🛫 节点选择, ☯️ 自动选择, 🇸🇬 狮城节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
