--- a/Configure/Surge/Surge.conf
+++ b/Configure/Surge/Surge.conf
@@ -160,13 +160,13 @@ Airport-2 = select,policy-path=https://raw.githubusercontent.com/Cuarentas/Auxil
 
 # ☢️ 外部节点自动匹配
 # ☢️ 匹配到关键字，自动收纳为节点组
-🇭🇰 香港节点 = url-test, include-other-group="Airport merger", policy-regex-filter=(🇭🇰)|(港)|(Hong)|(HK), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🇨🇳 台湾节点 = url-test, include-other-group="Airport merger", policy-regex-filter=(🇨🇳)|(台)|(Tai)|(TW), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🇺🇲 美国节点 = url-test, include-other-group="Airport merger", policy-regex-filter=(🇺🇸)|(美)|(States)|(US), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🇯🇵 日本节点 = url-test, include-other-group="Airport merger", policy-regex-filter=(🇯🇵)|(日)|(Japan)|(JP), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🇸🇬 狮城节点 = url-test, include-other-group="Airport merger", policy-regex-filter=(🇸🇬)|(新)|(Singapore)|(SG), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🇰🇷 韩国节点 = url-test, include-other-group="Airport merger", policy-regex-filter=(🇰🇷)|(韩)|(Korea)|(KR), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🎥 奈飞节点 = select, include-other-group="Airport merger", policy-regex-filter=(NF)|(奈飞)|(Netflix)|(video)|(Video)|(nf), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
+🇭🇰 香港节点 = url-test, Airport-1,Airport-2, policy-regex-filter=(🇭🇰)|(港)|(Hong)|(HK), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
+🇨🇳 台湾节点 = url-test, Airport-1,Airport-2, policy-regex-filter=(🇨🇳)|(台)|(Tai)|(TW), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
+🇺🇲 美国节点 = url-test, Airport-1,Airport-2,policy-regex-filter=(🇺🇸)|(美)|(States)|(US), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
+🇯🇵 日本节点 = url-test, Airport-1,Airport-2, policy-regex-filter=(🇯🇵)|(日)|(Japan)|(JP), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
+🇸🇬 狮城节点 = url-test, Airport-1,Airport-2, policy-regex-filter=(🇸🇬)|(新)|(Singapore)|(SG), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
+🇰🇷 韩国节点 = url-test, Airport-1,Airport-2, policy-regex-filter=(🇰🇷)|(韩)|(Korea)|(KR), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
+🎥 奈飞节点 = select,  Airport-1,Airport-2, policy-regex-filter=(NF)|(奈飞)|(Netflix)|(video)|(Video)|(nf), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
 
 # ☢️ 规则分流
 [Rule]
