--- a/Configure/Surge/Surge.conf
+++ b/Configure/Surge/Surge.conf
@@ -131,14 +131,12 @@ Airport-2 = select,policy-path=https://raw.githubusercontent.com/Cuarentas/Auxil
 # ☢️ PROXY = select, policy-path=https://sub.store/download/collection/MySub, update-interval=0
 
 
-# ☢️ Airport merger = url-test,include-other-group="Airport-1,Airport-2", hidden=1                                                        (备份)
-# ☢️☯️ 自动选择 = url-test, include-other-group="Airport merger", url=http://www.gstatic.com/generate_204, interval=300, tolerance=50     (备份)
-
-
+Airport merger = url-test,include-other-group="Airport-1,Airport-2", hidden=1                                                        
+  
 # ☢️ 配置选择文件
 🛫 节点选择 = select, ☯️ 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
-📶 手动切换 = select, Airport-1, Airport-2, url=http://www.gstatic.com/generate_204, interval=300, tolerance=50
-☯️ 自动选择 = url-test, Airport-1,  Airport-2, url=http://www.gstatic.com/generate_204, interval=300, tolerance=50
+📶 手动切换 = select, include-other-group=Airport merger， url=http://www.gstatic.com/generate_204, interval=300, tolerance=50
+☯️ 自动选择 = url-test, include-other-group=Airport merger, url=http://www.gstatic.com/generate_204, interval=300, tolerance=50
 📲 电报消息 = select, 🛫 节点选择, ☯️ 自动选择, 🇸🇬 狮城节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
 🎧 OpenAi = select, 🛫 节点选择, ☯️ 自动选择, 🇸🇬 狮城节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
 🎞 油管视频 = select, 🛫 节点选择, ☯️ 自动选择, 🇸🇬 狮城节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
@@ -160,13 +158,13 @@ Airport-2 = select,policy-path=https://raw.githubusercontent.com/Cuarentas/Auxil
 
 # ☢️ 外部节点自动匹配
 # ☢️ 匹配到关键字，自动收纳为节点组
-🇭🇰 香港节点 = url-test, Airport-1,Airport-2, policy-regex-filter=(🇭🇰)|(港)|(Hong)|(HK), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🇨🇳 台湾节点 = url-test, Airport-1,Airport-2, policy-regex-filter=(🇨🇳)|(台)|(Tai)|(TW), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🇺🇲 美国节点 = url-test, Airport-1,Airport-2,policy-regex-filter=(🇺🇸)|(美)|(States)|(US), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🇯🇵 日本节点 = url-test, Airport-1,Airport-2, policy-regex-filter=(🇯🇵)|(日)|(Japan)|(JP), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🇸🇬 狮城节点 = url-test, Airport-1,Airport-2, policy-regex-filter=(🇸🇬)|(新)|(Singapore)|(SG), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🇰🇷 韩国节点 = url-test, Airport-1,Airport-2, policy-regex-filter=(🇰🇷)|(韩)|(Korea)|(KR), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🎥 奈飞节点 = select,  Airport-1,Airport-2, policy-regex-filter=(NF)|(奈飞)|(Netflix)|(video)|(Video)|(nf), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
+🇭🇰 香港节点 = url-test, include-other-group=Airport merger， policy-regex-filter=(🇭🇰)|(港)|(Hong)|(HK), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
+🇨🇳 台湾节点 = url-test, include-other-group=Airport merger， policy-regex-filter=(🇨🇳)|(台)|(Tai)|(TW), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
+🇺🇲 美国节点 = url-test, include-other-group=Airport merger， policy-regex-filter=(🇺🇸)|(美)|(States)|(US), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
+🇯🇵 日本节点 = url-test,  include-other-group=Airport merger， policy-regex-filter=(🇯🇵)|(日)|(Japan)|(JP), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
+🇸🇬 狮城节点 = url-test, include-other-group=Airport merger， policy-regex-filter=(🇸🇬)|(新)|(Singapore)|(SG), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
+🇰🇷 韩国节点 = url-test, include-other-group=Airport merger， policy-regex-filter=(🇰🇷)|(韩)|(Korea)|(KR), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
+🎥 奈飞节点 = select, include-other-group=Airport merger, policy-regex-filter=(NF)|(奈飞)|(Netflix)|(video)|(Video)|(nf), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
 
 # ☢️ 规则分流
 [Rule]
