--- a/Configure/Surge/Surge.conf
+++ b/Configure/Surge/Surge.conf
@@ -117,9 +117,9 @@ EDC_Surge-Panel = type=generic,script-path=https://raw.githubusercontent.com/erd
 # ☢️ hidden=1 或者 hidden=true 隐藏该策略组
 
 # ☢️Airport-1 为自制节点
-Airport-1 = select,policy-path=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Node/Suger.txt, hidden=1
+Airport-1 = select, no-alert=0, hidden=0, include-all-proxies=1, update-interval=0, policy-path=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Node/Suger.txt
 # ☢️Airport-2 为收集节点
-Airport-2 = select,policy-path=https://raw.githubusercontent.com/Cuarentas/Auxiliary/main/Node/Collect.txt, hidden=1
+Airport-2 = select, no-alert=0, hidden=0, include-all-proxies=1, update-interval=0, policy-path=https://raw.githubusercontent.com/Cuarentas/Auxiliary/main/Node/Collect.txt
 
 
 # ☢️ 备用订阅链接URL:🚀
