--- a/Configure/Surge/Surge.conf
+++ b/Configure/Surge/Surge.conf
@@ -115,24 +115,20 @@ EDC_Surge-Panel = type=generic,script-path=https://raw.githubusercontent.com/erd
 [Proxy Group]
 # ☢️ 外部订阅链接
 # ☢️ hidden=1 或者 hidden=true 隐藏该策略组
-
 # ☢️Airport-1 为自制节点
-Airport-1 = select, no-alert=0, hidden=0, include-all-proxies=1, update-interval=0, policy-path=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Node/Suger.txt
+# ☢️ Airport-1 = select, no-alert=0, hidden=0, include-all-proxies=1, update-interval=0, policy-path=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Node/Suger.txt
 # ☢️Airport-2 为收集节点
-Airport-2 = select, no-alert=0, hidden=0, include-all-proxies=1, update-interval=0, policy-path=https://raw.githubusercontent.com/Cuarentas/Auxiliary/main/Node/Collect.txt
-
-
+# ☢️ Airport-2 = select, no-alert=0, hidden=0, include-all-proxies=1, update-interval=0, policy-path=https://raw.githubusercontent.com/Cuarentas/Auxiliary/main/Node/Collect.txt
 # ☢️ 备用订阅链接URL:🚀
-
 # ☢️ 此处可添加更多机场订阅链接
 # ☢️ 机场3 =select,policy-path=XXXXXXXXXX, hidden=1
 # ☢️ 机场4 =select,policy-path=XXXXXXXXXX, hidden=1
 # ☢️ 如增加Sub-Store订阅链接则写法如下：
 # ☢️ PROXY = select, policy-path=https://sub.store/download/collection/MySub, update-interval=0
+# ☢️ Airport merger = url-test,include-other-group="Airport-1,Airport-2", hidden=1                                                        
 
+✈️ 我的节点 = select, policy-path=你的订阅地址, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Universal/Final.png
 
-Airport merger = url-test,include-other-group="Airport-1,Airport-2", hidden=1                                                        
-  
 # ☢️ 配置选择文件
 🛫 节点选择 = select, ☯️ 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
 📶 手动切换 = select, include-other-group="Airport merger", url=http://www.gstatic.com/generate_204, interval=300, tolerance=50
