--- a/Configure/Surge/Surge.conf
+++ b/Configure/Surge/Surge.conf
@@ -127,40 +127,39 @@ EDC_Surge-Panel = type=generic,script-path=https://raw.githubusercontent.com/erd
 # ☢️ PROXY = select, policy-path=https://sub.store/download/collection/MySub, update-interval=0
 # ☢️ Airport merger = url-test,include-other-group="Airport-1,Airport-2", hidden=1                                                        
 
-✈️ 我的节点 = select, policy-path=你的订阅地址, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Universal/Final.png
+✈️ 我的节点 = select, policy-path=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Node/Suger.txt, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Universal/Final.png
 
 # ☢️ 配置选择文件
-🛫 节点选择 = select, ☯️ 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
-📶 手动切换 = select, include-other-group="Airport merger", url=http://www.gstatic.com/generate_204, interval=300, tolerance=50
-☯️ 自动选择 = url-test, include-other-group="Airport merger", url=http://www.gstatic.com/generate_204, interval=300, tolerance=50
-📲 电报消息 = select, 🛫 节点选择, ☯️ 自动选择, 🇸🇬 狮城节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
-🎧 OpenAi = select, 🛫 节点选择, ☯️ 自动选择, 🇸🇬 狮城节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
-🎞 油管视频 = select, 🛫 节点选择, ☯️ 自动选择, 🇸🇬 狮城节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
-📽 奈飞视频 = select, 🎥 奈飞节点, 🛫 节点选择
-📺 巴哈姆特 = select, 🇨🇳 台湾节点, 🛫 节点选择, 📶 手动切换, DIRECT
-💻 哔哩哔哩 = select, ⚖️ 全球直连, 🇨🇳 台湾节点, 🇭🇰 香港节点
-📡 国内媒体 = select, DIRECT, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 📶 手动切换
-🛰 国外媒体 = select, 🛫 节点选择, ☯️ 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
-👣 Google = select, DIRECT, 🛫 节点选择, 🇺🇲 美国节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 📶 手动切换
-💾 微软云盘 = select, DIRECT, 🛫 节点选择, 🇺🇲 美国节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 📶 手动切换
-🛃 微软服务 = select, DIRECT, 🛫 节点选择, 🇺🇲 美国节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 📶 手动切换
-🍎 苹果服务 = select, DIRECT, 🛫 节点选择, 🇺🇲 美国节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 📶 手动切换
-👨‍💻 游戏平台 = select, DIRECT, 🛫 节点选择, 🇺🇲 美国节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 📶 手动切换
-🎼 网易音乐 = select, DIRECT, 🛫 节点选择, ☯️ 自动选择
-⚖️ 全球直连 = select, DIRECT, 🛫 节点选择, ☯️ 自动选择
-🕸 广告拦截 = select, REJECT, DIRECT
-⚠️ 应用净化 = select, REJECT, DIRECT
-🐬 漏网之鱼 = select, 🛫 节点选择, ☯️ 自动选择, DIRECT, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换
+🛫 节点选择 = select, ☯️ 自动选择, ✈️ 我的节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
+📶 手动切换 = select, ✈️ 我的节点, url=http://www.gstatic.com/generate_204, interval=300, tolerance=50
+☯️ 自动选择 = url-test, include-other-group=✈️ 我的节点, url=http://www.gstatic.com/generate_204, interval=300, tolerance=50
+📲 电报消息 = select, ✈️ 我的节点, 🛫 节点选择, ☯️ 自动选择, 🇸🇬 狮城节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
+🎧 OpenAi = select, ✈️ 我的节点, 🛫 节点选择, ☯️ 自动选择, 🇸🇬 狮城节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
+🎞 油管视频 = select, ✈️ 我的节点, 🛫 节点选择, ☯️ 自动选择, 🇸🇬 狮城节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
+📽 奈飞视频 = select, ✈️ 我的节点, 🎥 奈飞节点, 🛫 节点选择
+📺 巴哈姆特 = select, ✈️ 我的节点, 🇨🇳 台湾节点, 🛫 节点选择, 📶 手动切换, DIRECT
+💻 哔哩哔哩 = select, ✈️ 我的节点, ⚖️ 全球直连, 🇨🇳 台湾节点, 🇭🇰 香港节点
+📡 国内媒体 = select, ✈️ 我的节点, DIRECT, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 📶 手动切换
+🛰 国外媒体 = select, ✈️ 我的节点, 🛫 节点选择, ☯️ 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
+👣 Google = select, ✈️ 我的节点, DIRECT, 🛫 节点选择, 🇺🇲 美国节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 📶 手动切换
+💾 微软云盘 = select, ✈️ 我的节点, DIRECT, 🛫 节点选择, 🇺🇲 美国节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 📶 手动切换
+🛃 微软服务 = select, ✈️ 我的节点, DIRECT, 🛫 节点选择, 🇺🇲 美国节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 📶 手动切换
+🍎 苹果服务 = select, ✈️ 我的节点, DIRECT, 🛫 节点选择, 🇺🇲 美国节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 📶 手动切换
+👨‍💻 游戏平台 = select, ✈️ 我的节点, DIRECT, 🛫 节点选择, 🇺🇲 美国节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇰🇷 韩国节点, 📶 手动切换
+🎼 网易音乐 = select, ✈️ 我的节点, DIRECT, 🛫 节点选择, ☯️ 自动选择
+⚖️ 全球直连 = select, ✈️ 我的节点, DIRECT, 🛫 节点选择, ☯️ 自动选择
+🕸 广告拦截 = select, ✈️ 我的节点, REJECT, DIRECT
+⚠️ 应用净化 = select, ✈️ 我的节点, REJECT, DIRECT
+🐬 漏网之鱼 = select, ✈️ 我的节点, 🛫 节点选择, ☯️ 自动选择, DIRECT, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换
 
 # ☢️ 外部节点自动匹配
 # ☢️ 匹配到关键字，自动收纳为节点组
-🇭🇰 香港节点 = url-test, include-other-group="Airport merger", policy-regex-filter=(🇭🇰)|(港)|(Hong)|(HK), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🇨🇳 台湾节点 = url-test, include-other-group="Airport merger",  policy-regex-filter=(🇨🇳)|(台)|(Tai)|(TW), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🇺🇲 美国节点 = url-test, include-other-group="Airport merger",  policy-regex-filter=(🇺🇸)|(美)|(States)|(US), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🇯🇵 日本节点 = url-test,  include-other-group="Airport merger",  policy-regex-filter=(🇯🇵)|(日)|(Japan)|(JP), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🇸🇬 狮城节点 = url-test, include-other-group="Airport merger",  policy-regex-filter=(🇸🇬)|(新)|(Singapore)|(SG), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🇰🇷 韩国节点 = url-test, include-other-group="Airport merger",  policy-regex-filter=(🇰🇷)|(韩)|(Korea)|(KR), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🎥 奈飞节点 = select, include-other-group="Airport merger",  policy-regex-filter=(NF)|(奈飞)|(Netflix)|(video)|(Video)|(nf), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
+🇭🇰 香港节点 = smart, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇭🇰)|(香港)|(Hong)|(HK), icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Hong_Kong.png
+🇺🇸 美国节点 = smart, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇺🇸)|(美国)|(States)|(US), icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/United_States.png
+🇯🇵 日本节点 = smart, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇯🇵)|(日本)|(Japan)|(JP), icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Japan.png
+🇨🇳 台湾节点 = smart, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇨🇳)|(台湾)|(Tai)|(TW), icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/China.png
+🇰🇷 韩国节点 = smart, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇰🇷)|(韩国)|(Korea)|(KR), icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/South_Korea.png
+🇸🇬 新加坡节点 = smart, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇸🇬)|(新加坡)|(Singapore)|(SG), icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Singapore.png
 
 # ☢️ 规则分流
 [Rule]
