--- a/Configure/Surge/Surge.conf
+++ b/Configure/Surge/Surge.conf
@@ -110,7 +110,7 @@ keyword-filter-type = false
 [Proxy Group]
 # > 外部订阅链接
 机场1 = select,policy-path=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Node/Suger.txt, hidden=1
-机场2 = select,policy-path=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Node/Collect.txt, hidden=1
+机场2 = select,policy-path=https://sub.danhu.ddns-ip.net/paste/A251001N1rhoxeHA/base64, hidden=1
 🔐 机场合并 = url-test,include-other-group="机场1,机场2", url=http://www.gstatic.com/generate_204, interval=300, tolerance=50
 
 # > 配置选择文件
