--- a/Configure/Surge/Surge.conf
+++ b/Configure/Surge/Surge.conf
@@ -115,8 +115,8 @@ keyword-filter-type = false
 
 # > 配置选择文件
 🛫 节点选择 = select, ☯️ 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
-📶 手动切换 = select, include-other-group="机场1,机场2"
-☯️ 自动选择 = url-test, include-other-group="机场1,机场2", url=http://www.gstatic.com/generate_204, interval=300, tolerance=50
+📶 手动切换 = select, include-other-group="🔐 机场合并"
+☯️ 自动选择 = url-test, include-other-group="🔐 机场合并", url=http://www.gstatic.com/generate_204, interval=300, tolerance=50
 📲 电报消息 = select, 🛫 节点选择, ☯️ 自动选择, 🇸🇬 狮城节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
 🎧 OpenAi = select, 🛫 节点选择, ☯️ 自动选择, 🇸🇬 狮城节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
 🎞 油管视频 = select, 🛫 节点选择, ☯️ 自动选择, 🇸🇬 狮城节点, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 📶 手动切换, DIRECT
@@ -138,13 +138,13 @@ keyword-filter-type = false
 
 # > 外部节点自动匹配
 # > 匹配到关键字，自动收纳为节点组
-🇭🇰 香港节点 = url-test, include-other-group="机场1,机场2", policy-regex-filter=(🇭🇰)|(港)|(Hong)|(HK), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🇨🇳 台湾节点 = url-test, include-other-group="机场1,机场2", policy-regex-filter=(🇨🇳)|(台)|(Tai)|(TW), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🇺🇲 美国节点 = url-test, include-other-group="机场1,机场2", policy-regex-filter=(🇺🇸)|(美)|(States)|(US), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🇯🇵 日本节点 = url-test, include-other-group="机场1,机场2", policy-regex-filter=(🇯🇵)|(日)|(Japan)|(JP), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🇸🇬 狮城节点 = url-test, include-other-group="机场1,机场2", policy-regex-filter=(🇸🇬)|(新)|(Singapore)|(SG), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🇰🇷 韩国节点 = url-test, include-other-group="机场1,机场2", policy-regex-filter=(🇰🇷)|(韩)|(Korea)|(KR), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
-🎥 奈飞节点 = select, include-other-group="机场1,机场2", policy-regex-filter=(NF)|(奈飞)|(Netflix)|(video)|(Video)|(nf), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
+🇭🇰 香港节点 = url-test, include-other-group="🔐 机场合并", policy-regex-filter=(🇭🇰)|(港)|(Hong)|(HK), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
+🇨🇳 台湾节点 = url-test, include-other-group="🔐 机场合并", policy-regex-filter=(🇨🇳)|(台)|(Tai)|(TW), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
+🇺🇲 美国节点 = url-test, include-other-group="🔐 机场合并", policy-regex-filter=(🇺🇸)|(美)|(States)|(US), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
+🇯🇵 日本节点 = url-test, include-other-group="🔐 机场合并", policy-regex-filter=(🇯🇵)|(日)|(Japan)|(JP), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
+🇸🇬 狮城节点 = url-test, include-other-group="🔐 机场合并", policy-regex-filter=(🇸🇬)|(新)|(Singapore)|(SG), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
+🇰🇷 韩国节点 = url-test, include-other-group="🔐 机场合并", policy-regex-filter=(🇰🇷)|(韩)|(Korea)|(KR), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
+🎥 奈飞节点 = select, include-other-group="🔐 机场合并", policy-regex-filter=(NF)|(奈飞)|(Netflix)|(video)|(Video)|(nf), url=http://www.gstatic.com/generate_204, interval=300, tolerance=150
  
 [Rule]
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list,⚖️ 全球直连,update-interval=86400
