--- a/Configure/Loon/Loon.conf
+++ b/Configure/Loon/Loon.conf
@@ -171,8 +171,8 @@ dl.l.google.com = server:119.29.29.29
 [Proxy Group]
 # ☢️ 节点选择
 节点选择 = select,手动切换,自动选择,url = http://www.gstatic.com/generate_204,,interval = 1800,interval = 1800,img-url = https://raw.githubusercontent.com/fanmingming/Rules/main/Filter/Proxy.png
-自动选择 = url-test,优选订阅，天城订阅,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
-手动切换 = select,优选订阅，天城订阅,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
+自动选择 = url-test,优选订阅,天城订阅,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
+手动切换 = select,优选订阅,天城订阅,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
 国内媒体 = select,全球直连,img-url = https://raw.githubusercontent.com/fanmingming/Rules/main/Filter/Bilibili.png
 国际媒体 = select,节点选择,手动切换,自动选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 微软服务 = select,节点选择,手动切换,自动选择,全球直连,img-url = https://raw.githubusercontent.com/fanmingming/Rules/main/Filter/Microsoft.png
