--- a/Configure/Loon/Loon.conf
+++ b/Configure/Loon/Loon.conf
@@ -163,7 +163,7 @@ dl.l.google.com = server:119.29.29.29
 
 优选订阅 = https://github.com/Cuarentas/Auxiliary/raw/main/Node/Forbear.txt,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Color/001-100/Airport%20(2).png
 
-天城订阅 = https://baidu.sosorg.nyc.mn/sub?uuid=0199dcba-0a8f-c325-2842-fefd2fbd85f5&encryption=none&security=tls&sni=fd.ziluoluo.ggff.net&type=ws&host=fd.ziluoluo.ggff.net&path=%2Fsnippets%3Fip%3Dkr.tp50000.netlib.re%253A50000%26nat64%3D6to4,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Color/201-300/hot.png
+天城订阅 = https://getsub.classelivre.eu.org/sub?force=auto,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Color/201-300/hot.png
 
 
 
