--- a/Configure/Loon/Loon.conf
+++ b/Configure/Loon/Loon.conf
@@ -163,9 +163,9 @@ dl.l.google.com = server:119.29.29.29
 
 优选订阅 = https://github.com/Cuarentas/Auxiliary/raw/main/Node/Forbear.txt,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Color/001-100/Airport%20(2).png
 
-天城订阅 = https://getsub.classelivre.eu.org/sub?force=auto,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Color/201-300/hot.png
+分享订阅 = https://raw.kkgithub.com/ripaojiedian/freenode/main/sub,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Color/201-300/hot.png
 
-
+轩辕节点 = https://xyfqzy.zone.id/yyds/auto,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Color/001-100/Area.png  
 
 # ☢️ 功能策略
 [Proxy Group]
