--- a/Configure/Loon/Loon.conf
+++ b/Configure/Loon/Loon.conf
@@ -2,7 +2,7 @@
 # 创建者: Cuarenta                                                                                                #
 # 客户端: Loon                                                                                                    #
 # 创建日期:2024-03-03 10:10:10                                                                                    #
-# 托管地址:https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Configure/Loon/Loon.conf         #                       
+# 托管地址:https://github.com/Cuarentas/Auxiliary/raw/main/Configure/Loon/Loon.conf                               #                       
 ##################################################################################################################
 
 # > 支持不同服务的分流，包括国内外
