--- a/Configure/QuantumultX/QuantumultX.conf
+++ b/Configure/QuantumultX/QuantumultX.conf
@@ -102,13 +102,12 @@ https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/QX.snippet, ta
 
 # ☢️ 远程节点订阅
 [server_remote]
-https://xyfqzy.zone.id/yyds/auto, tag=轩辕节点, update-interval=86400, opt-parser=true,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Vector/001-100/Bypass.png
 
-https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Node/General.txt, tag=仓库节点-Vless, update-interval=86400, opt-parser=true,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Vector/001-100/Bat.png
+https://github.com/Cuarentas/Auxiliary/raw/main/Node/Forbear.txt,tag=Github节点-Vless, update-interval=86400, opt-parser=true,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Vector/001-100/Azure%20(3).PNG
 
-https://getsub.classelivre.eu.org/sub?force=auto,tag=天城节点, update-interval=86400, opt-parser=true,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Vector/001-100/Airport.png
 
-https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Node/Provisiona.txt,tag=Github节点-Vless, update-interval=86400, opt-parser=true,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Vector/001-100/Azure%20(3).PNG
+
+
 
 
 # ☢️ 禁用系统DNS/IPv6
