--- a/Configure/Loon/Loon.conf
+++ b/Configure/Loon/Loon.conf
@@ -165,7 +165,7 @@ dl.l.google.com = server:119.29.29.29
 
 分享订阅 = https://raw.kkgithub.com/ripaojiedian/freenode/main/sub,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Color/201-300/hot.png
 
-轩辕节点 = https://xyfqzy.zone.id/yyds/auto,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Color/001-100/Area.png  
+天诚节点 = https://getsub.classelivre.eu.org/sub?force=auto,  img-url=https://raw.githubusercontent.com/Cuarentas/Auxiliary/refs/heads/main/Icon/Color/001-100/Area.png  
 
 # ☢️ 功能策略
 [Proxy Group]
