--- a/Configure/Loon/Loon.conf
+++ b/Configure/Loon/Loon.conf
@@ -170,18 +170,18 @@ dl.l.google.com = server:119.29.29.29
 # ☢️ 功能策略
 [Proxy Group]
 # ☢️ 节点选择
-节点选择 = select,自动选择,手动切换,优选订阅,分享订阅,天诚节点, url = http://www.gstatic.com/generate_204,interval = 1800,interval = 1800,img-url = https://raw.githubusercontent.com/fanmingming/Rules/main/Filter/Proxy.png
-自动选择 = url-test,优选订阅,分享订阅,天诚节点, url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
-手动切换 = select,优选订阅,分享订阅,天诚节点, url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://github.com/Cuarentas/Auxiliary/raw/main/Icon/Other/Download/001-100/09.png
-国内媒体 = select,全球直连,img-url = https://raw.githubusercontent.com/fanmingming/Rules/main/Filter/Bilibili.png
-国际媒体 = select,节点选择,手动切换,自动选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
-微软服务 = select,节点选择,手动切换,自动选择,全球直连,img-url = https://raw.githubusercontent.com/fanmingming/Rules/main/Filter/Microsoft.png
-苹果服务 = select,节点选择,手动切换,自动选择,img-url = https://raw.githubusercontent.com/fanmingming/Rules/main/Filter/Apple.png
-电报服务 = select,节点选择,手动切换,自动选择,img-url = https://raw.githubusercontent.com/fanmingming/Rules/main/Filter/Telegram.png
-国际抖音 = select,节点选择,手动切换,自动选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok.png
-油管视频 = select,国际媒体,全球直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
-应用净化 = select,REJECT,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png
-漏网之鱼 = select,节点选择,手动切换,自动选择,img-url = https://raw.githubusercontent.com/fanmingming/Rules/main/Filter/Outside.png
+节点选择 = select,自动选择,优选订阅,分享订阅,天诚节点, url = http://www.gstatic.com/generate_204,interval = 1800,interval = 1800, img-url = https://raw.githubusercontent.com/fanmingming/Rules/main/Filter/Proxy.png
+自动选择 = url-test,优选订阅,分享订阅,天诚节点, url = http://www.gstatic.com/generate_204,interval = 1800, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
+手动切换 = select,优选订阅,分享订阅,天诚节点, url = http://www.gstatic.com/generate_204,interval = 1800, img-url = https://github.com/Cuarentas/Auxiliary/raw/main/Icon/Other/Download/001-100/09.png
+国内媒体 = select,全球直连, img-url = https://raw.githubusercontent.com/fanmingming/Rules/main/Filter/Bilibili.png
+国际媒体 = select,节点选择,手动切换, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
+微软服务 = select,节点选择,手动切换,全球直连, img-url = https://raw.githubusercontent.com/fanmingming/Rules/main/Filter/Microsoft.png
+苹果服务 = select,节点选择,手动切换, img-url = https://raw.githubusercontent.com/fanmingming/Rules/main/Filter/Apple.png
+电报服务 = select,节点选择,手动切换, img-url = https://raw.githubusercontent.com/fanmingming/Rules/main/Filter/Telegram.png
+国际抖音 = select,节点选择,手动切换, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok.png
+油管视频 = select,国际媒体,全球直连, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
+应用净化 = select,REJECT,DIRECT, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png
+漏网之鱼 = select,节点选择,手动切换, img-url = https://raw.githubusercontent.com/fanmingming/Rules/main/Filter/Outside.png
 
 # ☢️ 为了与 Proxy 策略名称保持一致
 全球直连 = select,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Direct.png
